# isoconfens

./: CMakeLists.txt  ICEPropensity.cc  ice_propensity.cc
.devcontainer/: Dockerfile  devcontainer.json
share/: traj.trr
tests/: CMakeLists.txt  read_trr_test.cc
